// 大帅餐饮短视频创作工具 · 数据模型
// 生成：npx prisma generate ／ 迁移：npx prisma migrate dev
// 约定：金额用「分」，AI 价格用「分/百万 tokens」，时间存 UTC

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Merchant {
  id                   BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  phone                String    @unique @db.VarChar(20)
  wechatOpenid         String?   @unique @map("wechat_openid") @db.VarChar(64)
  wechatUnionid        String?   @map("wechat_unionid") @db.VarChar(64)
  nickname             String?   @db.VarChar(64)
  avatarUrl            String?   @db.VarChar(512)
  status               String    @default("ACTIVE") @db.VarChar(16)
  registerGrantGranted Boolean   @default(false) @map("register_grant_granted")
  lastLoginAt          DateTime? @map("last_login_at") @db.DateTime(3)
  createdAt            DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt            DateTime  @updatedAt @map("updated_at") @db.DateTime(3)
  deletedAt            DateTime? @map("deleted_at") @db.DateTime(3)

  stores      Store[]
  persona     Persona?
  creations   Creation[]
  beanAccount BeanAccount?
  ledgers     BeanLedger[]
  orders      Order[]
  memberships Membership[]
  aiCallLogs  AiCallLog[]
  renderTasks RenderTask[]

  @@map("merchant")
}

model Store {
  id         BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId BigInt    @map("merchant_id") @db.UnsignedBigInt()
  name       String    @db.VarChar(128)
  category   String?   @db.VarChar(64)
  province   String?   @db.VarChar(64)
  city       String?   @db.VarChar(64)
  district   String?   @db.VarChar(64)
  address    String?   @db.VarChar(255)
  contact    String?   @db.VarChar(64)
  isDefault  Boolean   @default(false) @map("is_default")
  status     String    @default("ACTIVE") @db.VarChar(16)
  createdAt  DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt  DateTime  @updatedAt @map("updated_at") @db.DateTime(3)
  deletedAt  DateTime? @map("deleted_at") @db.DateTime(3)

  merchant Merchant     @relation(fields: [merchantId], references: [id])
  dishes   Dish[]
  assets   MediaAsset[]
  creations Creation[]

  @@index([merchantId, deletedAt])
  @@map("store")
}

model Dish {
  id             BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  storeId        BigInt    @map("store_id") @db.UnsignedBigInt()
  name           String    @db.VarChar(128)
  intro          String?   @db.VarChar(500)
  sellingPoints  String?   @map("selling_points") @db.VarChar(1000)
  coverKey       String?   @map("cover_key") @db.VarChar(512)
  videoKey       String?   @map("video_key") @db.VarChar(512)
  sort           Int       @default(0)
  status         String    @default("ACTIVE") @db.VarChar(16)
  createdAt      DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt      DateTime  @updatedAt @map("updated_at") @db.DateTime(3)
  deletedAt      DateTime? @map("deleted_at") @db.DateTime(3)

  store Store @relation(fields: [storeId], references: [id])
  creations Creation[]

  @@index([storeId, deletedAt, sort])
  @@map("dish")
}

model Persona {
  id         BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId BigInt   @unique @map("merchant_id") @db.UnsignedBigInt()
  bossTags   String?  @map("boss_tags") @db.VarChar(500)
  activity   String?  @db.VarChar(1000)
  createdAt  DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt  DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  merchant Merchant @relation(fields: [merchantId], references: [id])

  @@map("persona")
}

model MediaAsset {
  id          BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId  BigInt    @map("merchant_id") @db.UnsignedBigInt()
  storeId     BigInt    @map("store_id") @db.UnsignedBigInt()
  ownerType   String    @map("owner_type") @db.VarChar(24)
  ownerId     BigInt?   @map("owner_id") @db.UnsignedBigInt()
  type        String    @db.VarChar(16)
  cosKey      String    @map("cos_key") @db.VarChar(512)
  bucket      String    @db.VarChar(128)
  region      String    @db.VarChar(64)
  sizeBytes   BigInt    @default(0) @map("size_bytes") @db.UnsignedBigInt()
  durationMs  Int?      @map("duration_ms") @db.UnsignedInt()
  width       Int?
  height      Int?
  coverKey    String?   @map("cover_key") @db.VarChar(512)
  status      String    @default("READY") @db.VarChar(16)
  createdAt   DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  deletedAt   DateTime? @map("deleted_at") @db.DateTime(3)

  store Store @relation(fields: [storeId], references: [id])

  @@index([storeId, type, deletedAt])
  @@index([ownerType, ownerId])
  @@map("media_asset")
}

model Creation {
  id         BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId BigInt    @map("merchant_id") @db.UnsignedBigInt()
  storeId    BigInt    @map("store_id") @db.UnsignedBigInt()
  dishId     BigInt?   @map("dish_id") @db.UnsignedBigInt()
  title      String?   @db.VarChar(255)
  track      String    @db.VarChar(24)
  complexity String    @db.VarChar(16)
  copyText   String?   @map("copy_text") @db.Text
  status     String    @default("DRAFT") @db.VarChar(24)
  createdAt  DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt  DateTime  @updatedAt @map("updated_at") @db.DateTime(3)
  deletedAt  DateTime? @map("deleted_at") @db.DateTime(3)

  merchant    Merchant     @relation(fields: [merchantId], references: [id])
  store       Store        @relation(fields: [storeId], references: [id])
  dish        Dish?        @relation(fields: [dishId], references: [id])
  shots       Shot[]
  renderTasks RenderTask[]

  @@index([merchantId, deletedAt, createdAt])
  @@map("creation")
}

model Shot {
  id               BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  creationId       BigInt    @map("creation_id") @db.UnsignedBigInt()
  seq              Int
  shotType         String?   @map("shot_type") @db.VarChar(64)
  durationSuggest  Int?      @map("duration_suggest")
  line             String?   @db.Text
  visualReq        String?   @map("visual_req") @db.Text
  libraryShotId    BigInt?   @map("library_shot_id") @db.UnsignedBigInt()
  assetId          BigInt?   @map("asset_id") @db.UnsignedBigInt()
  trimStartMs      Int       @default(0) @map("trim_start_ms") @db.UnsignedInt()
  trimEndMs        Int?      @map("trim_end_ms") @db.UnsignedInt()
  status           String    @default("PENDING") @db.VarChar(16)
  createdAt        DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt        DateTime  @updatedAt @map("updated_at") @db.DateTime(3)

  creation Creation @relation(fields: [creationId], references: [id])

  @@unique([creationId, seq])
  @@map("shot")
}

model ShotLibrary {
  id             BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  code           String    @unique @db.VarChar(64)
  name           String    @db.VarChar(128)
  category       String    @db.VarChar(32)
  tips           String?   @db.Text
  source         String    @default("MANUAL") @db.VarChar(16)
  demoVideoKey   String?   @map("demo_video_key") @db.VarChar(512)
  demoCoverKey   String?   @map("demo_cover_key") @db.VarChar(512)
  sort           Int       @default(0)
  enabled        Boolean   @default(true)
  aiGeneratedAt  DateTime? @map("ai_generated_at") @db.DateTime(3)
  createdAt      DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt      DateTime  @updatedAt @map("updated_at") @db.DateTime(3)

  @@index([category, enabled, sort])
  @@map("shot_library")
}

model RenderTask {
  id                 BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId         BigInt    @map("merchant_id") @db.UnsignedBigInt()
  creationId         BigInt    @map("creation_id") @db.UnsignedBigInt()
  status             String    @default("QUEUED") @db.VarChar(24)
  progress           Int       @default(0) @db.UnsignedTinyInt()
  // 产品档位：BASIC 粗剪 / AI 全自动 / PREMIUM 人工精剪（技术语义见 paramsJson.mode）
  grade              String    @default("AI") @db.VarChar(16)
  paramsJson         Json      @map("params_json")
  resultKey          String?   @map("result_key") @db.VarChar(512)
  previewKey         String?   @map("preview_key") @db.VarChar(512)
  resultSize         BigInt?   @map("result_size") @db.UnsignedBigInt()
  durationMs         Int?      @map("duration_ms") @db.UnsignedInt()
  errorCode          String?   @map("error_code") @db.VarChar(64)
  errorMsg           String?   @map("error_msg") @db.VarChar(500)
  retryCount         Int       @default(0) @map("retry_count") @db.UnsignedTinyInt()
  beanCharged        BigInt    @default(0) @map("bean_charged")
  cacheHit           Boolean   @default(false) @map("cache_hit")
  requestId          String?   @map("request_id") @db.VarChar(64)
  queueAt            DateTime? @map("queue_at") @db.DateTime(3)
  startAt            DateTime? @map("start_at") @db.DateTime(3)
  finishAt           DateTime? @map("finish_at") @db.DateTime(3)
  costMs             Int?      @map("cost_ms") @db.UnsignedInt()
  // 精品档：剪辑师接单时间
  assignedAt         DateTime? @map("assigned_at") @db.DateTime(3)
  // 精品档：SLA 截止时间，超时自动退款
  deadlineAt         DateTime? @map("deadline_at") @db.DateTime(3)
  createdAt          DateTime  @default(now()) @map("created_at") @db.DateTime(3)

  merchant Merchant @relation(fields: [merchantId], references: [id])
  creation Creation @relation(fields: [creationId], references: [id])

  @@index([creationId, createdAt])
  @@index([status, queueAt])
  @@index([grade, status])
  @@map("render_task")
}

model BeanAccount {
  id            BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId    BigInt   @unique @map("merchant_id") @db.UnsignedBigInt()
  balance       BigInt   @default(0)
  grantBalance  BigInt   @default(0) @map("grant_balance")
  frozen        BigInt   @default(0)
  totalRecharge BigInt   @default(0) @map("total_recharge")
  totalGrant    BigInt   @default(0) @map("total_grant")
  totalConsume  BigInt   @default(0) @map("total_consume")
  version       Int      @default(0)
  updatedAt     DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  merchant Merchant @relation(fields: [merchantId], references: [id])

  @@map("bean_account")
}

model BeanLedger {
  id           BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId   BigInt   @map("merchant_id") @db.UnsignedBigInt()
  type         String   @db.VarChar(24)
  bucket       String   @default("RECHARGE") @db.VarChar(16)
  amount       BigInt
  balanceAfter BigInt   @map("balance_after")
  grantAfter   BigInt   @default(0) @map("grant_after")
  frozenAfter  BigInt   @default(0) @map("frozen_after")
  bizType      String?  @map("biz_type") @db.VarChar(32)
  bizId        String?  @map("biz_id") @db.VarChar(64)
  requestId    String?  @map("request_id") @db.VarChar(64)
  remark       String?  @db.VarChar(255)
  operatorId   BigInt?  @map("operator_id") @db.UnsignedBigInt()
  createdAt    DateTime @default(now()) @map("created_at") @db.DateTime(3)

  merchant Merchant @relation(fields: [merchantId], references: [id])

  // 幂等键：同一 requestId 下，FREEZE / CONSUME / UNFREEZE 各只允许一条
  @@unique([requestId, type])
  @@index([merchantId, createdAt])
  @@index([bizType, bizId])
  @@map("bean_ledger")
}

model BeanPackage {
  id             BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  name           String   @db.VarChar(128)
  beans          BigInt
  bonusBeans     BigInt   @default(0) @map("bonus_beans")
  priceFen       Int      @map("price_fen") @db.UnsignedInt()
  memberPriceFen Int      @map("member_price_fen") @db.UnsignedInt()
  tag            String?  @db.VarChar(32)
  sort           Int      @default(0)
  enabled        Boolean  @default(true)
  createdAt      DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt      DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  @@index([enabled, sort])
  @@map("bean_package")
}

model MemberPackage {
  id          BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  name        String   @db.VarChar(128)
  code        String   @unique @db.VarChar(32)
  durationDays Int     @map("duration_days")
  priceFen    Int      @map("price_fen") @db.UnsignedInt()
  grantBeans  BigInt   @default(0) @map("grant_beans")
  rightsJson  Json?    @map("rights_json")
  tag         String?  @db.VarChar(32)
  sort        Int      @default(0)
  enabled     Boolean  @default(true)
  createdAt   DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt   DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  memberships Membership[]

  @@index([enabled, sort])
  @@map("member_package")
}

model Membership {
  id             BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId     BigInt   @map("merchant_id") @db.UnsignedBigInt()
  packageId      BigInt   @map("package_id") @db.UnsignedBigInt()
  startAt        DateTime @map("start_at") @db.DateTime(3)
  endAt          DateTime @map("end_at") @db.DateTime(3)
  sourceOrderId  BigInt?  @map("source_order_id") @db.UnsignedBigInt()
  grantBeans     BigInt   @default(0) @map("grant_beans")
  grantExpireAt  DateTime? @map("grant_expire_at") @db.DateTime(3)
  status         String   @default("ACTIVE") @db.VarChar(16)
  createdAt      DateTime @default(now()) @map("created_at") @db.DateTime(3)

  merchant Merchant      @relation(fields: [merchantId], references: [id])
  package  MemberPackage @relation(fields: [packageId], references: [id])

  @@index([merchantId, endAt])
  @@index([status, endAt])
  @@map("membership")
}

model Order {
  id                    BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  orderNo               String    @unique @map("order_no") @db.VarChar(64)
  merchantId            BigInt    @map("merchant_id") @db.UnsignedBigInt()
  orderType             String    @map("order_type") @db.VarChar(24)
  refId                 BigInt    @map("ref_id") @db.UnsignedBigInt()
  amountFen             Int       @map("amount_fen") @db.UnsignedInt()
  originalAmountFen     Int       @map("original_amount_fen") @db.UnsignedInt()
  memberDiscountApplied Boolean   @default(false) @map("member_discount_applied")
  beans                 BigInt    @default(0)
  status                String    @default("PENDING") @db.VarChar(24)
  wxPrepayId            String?   @map("wx_prepay_id") @db.VarChar(128)
  wxTransactionId       String?   @map("wx_transaction_id") @db.VarChar(128)
  paidAt                DateTime? @map("paid_at") @db.DateTime(3)
  expireAt              DateTime  @map("expire_at") @db.DateTime(3)
  createdAt             DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt             DateTime  @updatedAt @map("updated_at") @db.DateTime(3)

  merchant Merchant @relation(fields: [merchantId], references: [id])

  @@unique([wxTransactionId])
  @@index([merchantId, createdAt])
  @@index([status, expireAt])
  @@map("order")
}

model AiProvider {
  id                 BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  code               String    @unique @db.VarChar(64)
  name               String    @db.VarChar(128)
  providerType       String    @map("provider_type") @db.VarChar(32)
  protocol           String    @default("OPENAI_COMPATIBLE") @db.VarChar(32)
  baseUrl            String    @map("base_url") @db.VarChar(512)
  apiKeyEncrypted    Bytes     @map("api_key_encrypted") @db.VarBinary(1024)
  apiKeyMasked       String?   @map("api_key_masked") @db.VarChar(64)
  enabled            Boolean   @default(true)
  priority           Int       @default(100)
  healthStatus       String    @default("HEALTHY") @map("health_status") @db.VarChar(16)
  circuitOpenUntil   DateTime? @map("circuit_open_until") @db.DateTime(3)
  lastTestAt         DateTime? @map("last_test_at") @db.DateTime(3)
  lastTestLatencyMs  Int?      @map("last_test_latency_ms")
  lastTestStatus     String?   @map("last_test_status") @db.VarChar(16)
  lastTestError      String?   @map("last_test_error") @db.VarChar(500)
  monthlyBudgetFen   Int?      @map("monthly_budget_fen") @db.UnsignedInt()
  usedBudgetFen      Int       @default(0) @map("used_budget_fen") @db.UnsignedInt()
  budgetResetAt      DateTime? @map("budget_reset_at") @db.DateTime(3)
  createdAt          DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt          DateTime  @updatedAt @map("updated_at") @db.DateTime(3)

  models AiModel[]
  logs   AiCallLog[]

  @@index([enabled, priority])
  @@map("ai_provider")
}

model AiModel {
  id                    BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  providerId            BigInt   @map("provider_id") @db.UnsignedBigInt()
  modelCode             String   @map("model_code") @db.VarChar(128)
  displayName           String   @map("display_name") @db.VarChar(128)
  capability            String   @default("TEXT") @db.VarChar(32)
  maxContextTokens      Int?     @map("max_context_tokens") @db.UnsignedInt()
  maxOutputTokens       Int?     @map("max_output_tokens") @db.UnsignedInt()
  inputPricePerMtok     Int      @default(0) @map("input_price_per_mtok") @db.UnsignedInt()
  outputPricePerMtok    Int      @default(0) @map("output_price_per_mtok") @db.UnsignedInt()
  enabled               Boolean  @default(true)
  createdAt             DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt             DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  provider AiProvider  @relation(fields: [providerId], references: [id])
  logs     AiCallLog[]

  @@unique([providerId, modelCode])
  @@index([enabled])
  @@map("ai_model")
}

model AiScene {
  id               BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  code             String   @unique @db.VarChar(64)
  name             String   @db.VarChar(128)
  promptTemplate   String   @map("prompt_template") @db.MediumText
  fallbackTemplate String?  @map("fallback_template") @db.MediumText
  defaultModelId   BigInt   @map("default_model_id") @db.UnsignedBigInt()
  fallbackModelIds Json     @map("fallback_model_ids")
  beanPrice        BigInt   @map("bean_price")
  timeoutMs        Int      @default(30000) @map("timeout_ms") @db.UnsignedInt()
  maxRetries       Int      @default(2) @map("max_retries") @db.UnsignedTinyInt()
  temperature      Decimal? @db.Decimal(3, 2)
  maxOutputTokens  Int?     @map("max_output_tokens") @db.UnsignedInt()
  enabled          Boolean  @default(true)
  createdAt        DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt        DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  @@map("ai_scene")
}

model AiCallLog {
  id                    BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId            BigInt?  @map("merchant_id") @db.UnsignedBigInt()
  sceneCode             String   @map("scene_code") @db.VarChar(64)
  requestId            String   @map("request_id") @db.VarChar(64)
  providerId           BigInt   @map("provider_id") @db.UnsignedBigInt()
  modelId              BigInt   @map("model_id") @db.UnsignedBigInt()
  isFallback           Boolean  @default(false) @map("is_fallback")
  fallbackFromModelId  BigInt?  @map("fallback_from_model_id") @db.UnsignedBigInt()
  promptTokens         Int      @default(0) @map("prompt_tokens") @db.UnsignedInt()
  completionTokens     Int      @default(0) @map("completion_tokens") @db.UnsignedInt()
  totalTokens          Int      @default(0) @map("total_tokens") @db.UnsignedInt()
  costFen              Int      @default(0) @map("cost_fen") @db.UnsignedInt()
  beanCharged          BigInt   @default(0) @map("bean_charged")
  beanBucket           String?  @map("bean_bucket") @db.VarChar(16)
  latencyMs            Int      @default(0) @map("latency_ms") @db.UnsignedInt()
  status               String   @db.VarChar(16)
  errorCode            String?  @map("error_code") @db.VarChar(64)
  errorMsg             String?  @map("error_msg") @db.VarChar(1000)
  promptSnapshot       String?  @map("prompt_snapshot") @db.MediumText
  responseSnapshot     String?  @map("response_snapshot") @db.MediumText
  createdAt            DateTime @default(now()) @map("created_at") @db.DateTime(3)

  merchant Merchant?  @relation(fields: [merchantId], references: [id])
  provider AiProvider @relation(fields: [providerId], references: [id])
  model    AiModel    @relation(fields: [modelId], references: [id])

  @@unique([requestId])
  @@index([merchantId, createdAt])
  @@index([providerId, createdAt])
  @@index([createdAt, costFen])
  @@map("ai_call_log")
}

model SystemSetting {
  id          BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  groupKey    String   @map("group_key") @db.VarChar(64)
  settingKey  String   @map("setting_key") @db.VarChar(64)
  settingVal  String   @map("setting_val") @db.Text
  valueType   String   @default("STRING") @map("value_type") @db.VarChar(16)
  displayName String   @map("display_name") @db.VarChar(128)
  description String?  @db.VarChar(500)
  sort        Int      @default(0)
  isPublic    Boolean  @default(false) @map("is_public")
  updatedAt   DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  @@unique([groupKey, settingKey])
  @@map("system_setting")
}

model TtsProvider {
  id               BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  code             String    @unique @db.VarChar(32)
  name             String    @db.VarChar(128)
  appId            String?   @map("app_id") @db.VarChar(64)
  secretIdEncrypted Bytes?   @map("secret_id_encrypted") @db.VarBinary(1024)
  apiKeyEncrypted  Bytes?    @map("api_key_encrypted") @db.VarBinary(1024)
  voiceId          String?   @map("voice_id") @db.VarChar(64)
  extraJson        Json?     @map("extra_json")
  enabled          Boolean   @default(false)
  priority         Int       @default(100)
  createdAt        DateTime  @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt        DateTime  @updatedAt @map("updated_at") @db.DateTime(3)

  @@index([enabled, priority])
  @@map("tts_provider")
}

model SmsCode {
  id        BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  phone     String   @db.VarChar(20)
  codeHash  String   @map("code_hash") @db.VarChar(128)
  scene     String   @default("LOGIN") @db.VarChar(24)
  ip        String?  @db.VarChar(64)
  expiresAt DateTime @map("expires_at") @db.DateTime(3)
  usedAt    DateTime? @map("used_at") @db.DateTime(3)
  attempts  Int      @default(0) @db.UnsignedTinyInt()
  createdAt DateTime @default(now()) @map("created_at") @db.DateTime(3)

  @@index([phone, scene, createdAt])
  @@map("sms_code")
}

model AdminUser {
  id           BigInt    @id @default(autoincrement()) @db.UnsignedBigInt()
  username     String    @unique @db.VarChar(64)
  passwordHash String    @map("password_hash") @db.VarChar(255)
  displayName  String?   @map("display_name") @db.VarChar(64)
  status       String    @default("ACTIVE") @db.VarChar(16)
  lastLoginAt  DateTime? @map("last_login_at") @db.DateTime(3)
  createdAt    DateTime  @default(now()) @map("created_at") @db.DateTime(3)

  @@map("admin_user")
}

model SubscribeMessageRecord {
  id            BigInt   @id @default(autoincrement()) @db.UnsignedBigInt()
  merchantId    BigInt   @map("merchant_id") @db.UnsignedBigInt()
  templateCode  String   @map("template_code") @db.VarChar(64)
  wxTemplateId  String   @map("wx_template_id") @db.VarChar(128)
  grantedCount  Int      @default(0) @map("granted_count") @db.UnsignedTinyInt()
  usedCount     Int      @default(0) @map("used_count") @db.UnsignedTinyInt()
  expiredAt     DateTime? @map("expired_at") @db.DateTime(3)
  createdAt     DateTime @default(now()) @map("created_at") @db.DateTime(3)
  updatedAt     DateTime @updatedAt @map("updated_at") @db.DateTime(3)

  @@unique([merchantId, templateCode])
  @@index([templateCode, grantedCount, usedCount])
  @@map("subscribe_message_record")
}
